--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,21 @@
     <artifactId>GitlabMonitor</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+	<profiles>
+		<profile>
+		  <id>jdk-1.8</id>
+		  <activation>
+		      <activeByDefault>true</activeByDefault>
+		      <jdk>1.8</jdk>
+		  </activation>
+		  <properties>
+		      <maven.compiler.source>1.8</maven.compiler.source>
+		      <maven.compiler.target>1.8</maven.compiler.target>
+		      <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
+		  </properties>
+		</profile>
+	</profiles>
+
     <properties>
         <springsecure>3.0.5.RELEASE</springsecure>
         <springversion>4.1.0.RELEASE</springversion>
