--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,9 @@
 *.iml
 out
 gen
-/target/
-/web/static/css/bootstrap/
-/web/static/js/chart.js/
+target/
+/**/web/static/css/bootstrap/
+/**/web/static/js/chart.js/
 
 # Eclipse project files
 .classpath
