新增本地数据库配置

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,11 @@
-#jdbc
+#remote_configure_db
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://114.55.91.100:3333/glmonitor?useUnicode=true&characterEncoding=utf8
 jdbc.username=pppadmin
 jdbc.password=passwd
+
+#local_configure_db
+local.jdbc.driverClassName=com.mysql.jdbc.Driver
+local.jdbc.url=jdbc:mysql://127.0.0.1/gitlab?useUnicode=true&characterEncoding=utf8
+local.jdbc.username=user
+local.jdbc.password=password
