--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 #jdbc
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://114.55.91.100:3333/glmonitor?useUnicode=true&characterEncoding=utf8
-jdbc.username=pppadmin
-jdbc.password=passwd
+jdbc.url=jdbc:mysql://172.17.199.246:3306/gitlab?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc.username=user
+jdbc.password=password
