--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -6,6 +6,6 @@ jdbc.password=passwd
 
 #local_configure_db
 local.jdbc.driverClassName=com.mysql.jdbc.Driver
-local.jdbc.url=jdbc:mysql://127.0.0.1/gitlab?useUnicode=true&characterEncoding=utf8
-local.jdbc.username=user
-local.jdbc.password=password
+local.jdbc.url=jdbc:mysql://localhost:3306/gitlab?useUnicode=true&characterEncoding=utf8
+local.jdbc.username=root
+local.jdbc.password=131250179
