Set up my own brach and disconnect from master
-Fork the master and then clone on desktop
-Use the changed final work to cover the unchanged cloned one
-Submmit the new covered project and remove the old project

These three steps help me submmit changes of this project ( which I
participated in but didn't fork ) to my own branch without conflicting
with the master.

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,11 +1,18 @@
-#remote_configure_db
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://114.55.91.100:3333/glmonitor?useUnicode=true&characterEncoding=utf8
-jdbc.username=pppadmin
-jdbc.password=passwd
+##remote_configure_db
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://114.55.91.100:3333/glmonitor?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#jdbc.username=pppadmin
+#jdbc.password=passwd
 
-#local_configure_db
-local.jdbc.driverClassName=com.mysql.jdbc.Driver
-local.jdbc.url=jdbc:mysql://localhost:3306/gitlab?useUnicode=true&characterEncoding=utf8
-local.jdbc.username=root
-local.jdbc.password=131250179
+##local_configure_db
+#local.jdbc.driverClassName=com.mysql.jdbc.Driver
+#local.jdbc.url=jdbc:mysql://localhost:3306/gitlab?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#local.jdbc.username=root
+#local.jdbc.password=19941009jstzWJY
+
+
+
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/gitlab?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc.username=root
+jdbc.password=19941009jstzWJY
