--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -9,6 +9,11 @@
         <param-value>WEB-INF/applicationContext.xml</param-value>
     </context-param>
 
+    <context-param>
+        <param-name>mybatisConfigLocation</param-name>
+        <param-value>WEB-INF/mybatis-configuration.xml</param-value>
+    </context-param>
+
     <servlet>
         <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
